--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -13,10 +13,10 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.EX
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.EXTENDED_FUSES/value=0xFD
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.FILE/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.FILE/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.FILE/value=stk500v2/stk500boot_v2_mega2560.hex
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.FILE/value=optiboot/optiboot_atmega328.hex
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.HIGH_FUSES/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.HIGH_FUSES/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.HIGH_FUSES/value=0xD8
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.HIGH_FUSES/value=0xDE
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.LOCK_BITS/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.LOCK_BITS/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BOOTLOADER.LOCK_BITS/value=0x0F
@@ -34,7 +34,7 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.ARCH/op
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.ARCH/value=AVR
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.BOARD/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.BOARD/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.BOARD/value=AVR_MEGA2560
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.BOARD/value=AVR_UNO
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.CORE.PATH/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.CORE.PATH/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.CORE.PATH/value=${eclipse_home}/arduinoPlugin/packages/arduino/hardware/avr/1.6.21/cores/arduino
@@ -49,7 +49,7 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.F_CPU/o
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.F_CPU/value=16000000L
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.MCU/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.MCU/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.MCU/value=atmega2560
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.MCU/value=atmega328p
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.PATH/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.PATH/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.PATH/value=${ProjDirPath}/${ConfigName}
@@ -67,10 +67,10 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.USB_MAN
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.USB_MANUFACTURER/value="Unknown"
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT.PATH/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT.PATH/value=${eclipse_home}/arduinoPlugin/packages/arduino/hardware/avr/1.6.21/variants/mega
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT.PATH/value=${eclipse_home}/arduinoPlugin/packages/arduino/hardware/avr/1.6.21/variants/standard
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT/value=mega
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.BUILD.VARIANT/value=standard
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.AR.CMD/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.AR.CMD/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.AR.CMD/value=avr-gcc-ar
@@ -91,7 +91,7 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.EL
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.ELF.EXTRA_FLAGS/value=
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.ELF.FLAGS/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.ELF.FLAGS/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.ELF.FLAGS/value=${A.COMPILER.WARNING_FLAGS} -Os -Wl,--gc-sections,--relax
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.ELF.FLAGS/value=${A.COMPILER.WARNING_FLAGS} -Os -g -flto -fuse-linker-plugin -Wl,--gc-sections
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.EXTRA_FLAGS/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.EXTRA_FLAGS/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.COMPILER.C.EXTRA_FLAGS/value=
@@ -160,28 +160,22 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.ESP8266.NETWO
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.ESP8266.NETWORK.UPLOAD.TOOL/value=esp8266OTA
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.NAME/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.NAME/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.NAME/value=Arduino/Genuino Mega or Mega 2560
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.NAME/value=Arduino/Genuino Uno
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PACKAGES/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PACKAGES/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PACKAGES/value=${eclipse_home}/arduinoPlugin/packages
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.0/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.0/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.0/value=0x0010
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.0/value=0x0043
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.1/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.1/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.1/value=0x0042
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.1/value=0x0001
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.2/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.2/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.2/value=0x0010
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.2/value=0x0043
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.3/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.3/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.3/value=0x0042
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.4/delimiter=\:
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.4/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.4/value=0x0210
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.5/delimiter=\:
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.5/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.5/value=0x0242
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.PID.3/value=0x0243
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PREPROC.INCLUDES.FLAGS/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PREPROC.INCLUDES.FLAGS/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.PREPROC.INCLUDES.FLAGS/value=-w -x c++ -M -MG -MP
@@ -451,13 +445,13 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.ALTID/
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.ALTID/value=no_altID
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_DATA_SIZE/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_DATA_SIZE/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_DATA_SIZE/value=8192
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_DATA_SIZE/value=2048
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_SIZE/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_SIZE/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_SIZE/value=253952
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.MAXIMUM_SIZE/value=32256
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.PROTOCOL/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.PROTOCOL/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.PROTOCOL/value=wiring
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.PROTOCOL/value=arduino
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.SPEED/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.SPEED/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.UPLOAD.SPEED/value=115200
@@ -481,13 +475,7 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.2/operati
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.2/value=0x2A03
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.3/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.3/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.3/value=0x2A03
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.4/delimiter=\:
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.4/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.4/value=0x2341
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.5/delimiter=\:
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.5/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.5/value=0x2341
+environment/project/io.sloeber.core.toolChain.release.1364509751/A.VID.3/value=0x2341
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ARCHITECTURE_ID/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ARCHITECTURE_ID/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ARCHITECTURE_ID/value=avr
@@ -496,16 +484,16 @@ environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARDS_F
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARDS_FILE/value=${eclipse_home}/arduinoPlugin/packages/arduino/hardware/avr/1.6.21/boards.txt
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_ID/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_ID/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_ID/value=mega
+environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_ID/value=uno
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_NAME/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_NAME/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_NAME/value=Arduino/Genuino Mega or Mega 2560
+environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.BOARD_NAME/value=Arduino/Genuino Uno
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.COM_PORT/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.COM_PORT/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.COM_PORT/value=/dev/cu.usbmodem1461
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ECLIPSE_LOCATION/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ECLIPSE_LOCATION/operation=replace
-environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ECLIPSE_LOCATION/value=${eclipse_home}////////
+environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.ECLIPSE_LOCATION/value=${eclipse_home}/////////////
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.EXTRA.ALL/delimiter=\:
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.EXTRA.ALL/operation=replace
 environment/project/io.sloeber.core.toolChain.release.1364509751/JANTJE.EXTRA.ALL/value=
